; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/pcmcia/extr_synclink_cs.c_tx_set_idle.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/pcmcia/extr_synclink_cs.c_tx_set_idle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64 }

@HDLC_TXIDLE_FLAGS = common dso_local global i64 0, align 8
@CHA = common dso_local global i64 0, align 8
@CCR1 = common dso_local global i64 0, align 8
@BIT3 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*)* @tx_set_idle to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tx_set_idle(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %3 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %4 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @HDLC_TXIDLE_FLAGS, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %15

8:                                                ; preds = %1
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %10 = load i64, i64* @CHA, align 8
  %11 = load i64, i64* @CCR1, align 8
  %12 = add nsw i64 %10, %11
  %13 = load i32, i32* @BIT3, align 4
  %14 = call i32 @set_reg_bits(%struct.TYPE_5__* %9, i64 %12, i32 %13)
  br label %22

15:                                               ; preds = %1
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %17 = load i64, i64* @CHA, align 8
  %18 = load i64, i64* @CCR1, align 8
  %19 = add nsw i64 %17, %18
  %20 = load i32, i32* @BIT3, align 4
  %21 = call i32 @clear_reg_bits(%struct.TYPE_5__* %16, i64 %19, i32 %20)
  br label %22

22:                                               ; preds = %15, %8
  ret void
}

declare dso_local i32 @set_reg_bits(%struct.TYPE_5__*, i64, i32) #1

declare dso_local i32 @clear_reg_bits(%struct.TYPE_5__*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
